# Emulator

./: AddressBus.h  CMakeLists.txt  DataBus.cpp  DataBus.h  FlagRegister.cpp  FlagRegister.h  Memory.cpp  Register.h  assembler_main.cpp  constants.h  linecounter.py  main.cpp
Assembler/: Assembler.cpp  Assembler.h  Parser.cpp  Parser.h  Tockenizer.cpp  Tockenizer.h  Tokenizer.cpp  Tokenizer.h  assembler_main.cpp
Assembler/ExecFileFormat/: Execfile.cpp  Execfile.h
Components/: AddressBus.cpp  AddressBus.h  AllComponents.h  DataBus.cpp  DataBus.h  FlagRegister.cpp  FlagRegister.h  Memory.cpp  Memory.h  MemoryController.cpp  MemoryController.h  MemoryPointerRegiser.cpp  MemoryPointerRegiser.h  PortController.cpp  PortController.h  Ports.cpp  Ports.h  Register.cpp  Register.h  RegisterPair.cpp  RegisterPair.h  constants.h
Core/: DataTypes.h  Decoder.cpp  Emulator.cpp  Emulator.h  Errors.cpp  Executor.cpp  emulator.cpp  emulator.h  fetch.cpp
Core/microcode/: Arithmetic.cpp  Datatransfer.cpp  FlowControl.cpp  InputOutput.cpp  Interrupts.cpp  Logical.cpp  StackOperations.cpp  list_separator.py  special.cpp
Helper/: Argparse.cpp  Argparse.h  Disassembler.cpp  Disassembler.h  Grapher.cpp  Grapher.h  Screen.cpp  Screen.h
Helpers/: Argparse.cpp  Argparse.h
InstructionSet/: Instructions.h
TranslationLayer/: main.cpp
